[package]
name = "vibing"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"

axum = "0.8.4"